[Fix] results-list.component: tags when collapsed

--- a/static/prototype/src/app/components/results-list/results-list.component.scss
+++ b/static/prototype/src/app/components/results-list/results-list.component.scss
@@ -9,7 +9,6 @@ $gutter-results-default: $distance-outer-default / 2;
   height: calc(100% - 40px);
   box-sizing: border-box;
   overflow-y: auto;
-  position: relative;
 
   .collapsed {
     position: absolute;
